update PR workflow

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,5 +18,7 @@ jobs:
           go-version: '1.13.5'
       - name: Build
         run: go build -v ./...
+      - name: Build Command
+        run: go build -o build/s3web ./cmd/s3web
       - name: Test
         run: go test -v ./...
